# wgit

./: .gitignore  Cargo.toml  LICENSE  README.md  design.md
.github/workflows/: release.yml
docs/: beginner-github-flow-playbook.md  convention-normalization-spec.md  github-flow-gap-analysis.md  high-risk-command-safety-spec.md  quality-gates-and-test-matrix.md
src/: cli.rs  config.rs  git.rs  main.rs  utils.rs
src/commands/: add.rs  branch.rs  commit.rs  config.rs  context.rs  delete.rs  finish.rs  fops.rs  init.rs  menu.rs  mod.rs  remote.rs  solve.rs  start.rs  switch.rs  sync.rs  undo.rs  update.rs
