[package]
name = "wgit"
version = "0.4.1"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
inquire = "0.7"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
crossterm = "0.27"
self_update = { version = "0.41", default-features = false, features =["archive-tar", "archive-zip", "compression-flate2", "rustls"] }
ignore = "0.4"
sysinfo = "0.32"