[package]
name = "wgit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "3"
crossterm = "0.29.0"
ratatui = "0.30.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
toml = "1.0.4"
unicode-width = "0.2"
